YAML/gateway.yaml
---
apiVersion: install.istio.io/v1alpha1
kind: IstioOperator
spec:
  components:
    ingressGateways:
      - name: istio-ingressgateway
        enabled: true
        k8s:
          serviceAnnotations:
            service.beta.kubernetes.io/aws-load-balancer-type: "nlb"

### if gateway CRD need to be installed use below command by pasting above content in the generated-istio-manifest.yaml.
#### istioctl install -f generated-istio-manifest.yaml -n istio-system

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
spec:
  selector:
    istio: ingressgateway # label of ingressgateway deployed above
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "vote.telugugcp.xyz"
    - "result.telugugcp.xyz"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vote
spec:
  hosts:
  - "vote.telugugcp.xyz"
  gateways:
  - app-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: vote
        port:
          number: 80
          
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: result
spec:
  hosts:
  - "result.telugugcp.xyz"
  gateways:
  - app-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: result
        port:
          number: 80
